--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<body>
 		<input type="text" id="code">
 		<p id="deadfish"></p>
-		<script>
+		<script type="module">
 			import "./deadfish.js"
 			document.getElementById("code").addEventListener("keydown", function(e){
 				document.getElementById("deadfish").innerHTML = deadfish(document.getElementById("deadfish"))
