--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<input type="text" id="code">
 		<p id="deadfish"></p>
 		<script type="module">
-			import "./deadfish.js"
+			import deadfish from "./deadfish.js"
 			document.getElementById("code").addEventListener("keydown", function(e){
 				document.getElementById("deadfish").innerHTML = deadfish(document.getElementById("deadfish"))
 			})
