--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<script type="module">
 			import { deadfish } from "./deadfish.js"
 			document.getElementById("code").addEventListener("keydown", function(e){
-				document.getElementById("deadfish").innerHTML = deadfish(document.getElementById("deadfish").value)
+				document.getElementById("deadfish").innerHTML = deadfish(document.getElementById("code").value)
 			})
 		</script>
 	</body>
