--- a/index.html
+++ b/index.html
@@ -6,17 +6,18 @@
 	</head>
 	<body>
 		<input type="text" id="code" style="width: 75vw; font-family: monospace"><br>
-		<select id="select">
+		<select id="ascii">
 			<option value="raw">Raw data</option>
-			<option value="ascii">Raw data</option>
+			<option value="ascii">ASCII</option>
 		</select>
 		<p id="deadfish"></p>
 		<script type="module">
 			import { deadfish } from "./deadfish.js"
 			function out () {
 				setTimeout(function(){
-					document.getElementById("deadfish").innerHTML = deadfish(document.getElementById("code").value, (document.getElementById("select").value == "ascii"))
-				}, 10)}
+					document.getElementById("deadfish").innerHTML = deadfish(document.getElementById("code").value, (document.getElementById("ascii").value == "ascii"))
+				}, 10)
+			}
 			document.getElementById("code").addEventListener("keydown", out())
 			document.getElementById("select").addEventListener("click", out())
 		</script>
