--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 				}, 10)
 			}
 			document.getElementById("code").addEventListener("keydown", out())
-			document.getElementById("select").addEventListener("click", out())
+			document.getElementById("ascii").addEventListener("click", out())
 		</script>
 	</body>
 </html>
